fix(gtk320: toolbar): titlebar button paddding (to preserve square shape for the icons with small SPACING values - 2

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -151,7 +151,7 @@
         button {
             @include button($header_button_bg_color, $header_button_fg_color);
 
-            padding: $spacing ($spacing + 5px);
+            padding: $spacing if($spacing > 8px, $spacing, 8px);
         }
 
         button.titlebutton + separator.titlebutton {
